tests/ui/root_namespace.stderr
error: unexpected token: `]`
 --> $DIR/root_namespace.rs:9:19
  |
9 |     #[namespace = ]
  |                   ^
